--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -183,6 +183,27 @@
 			<version>${spring.version}</version>
 		</dependency>
 
+	 <dependency>
+                <groupId>org.springframework.security</groupId>
+             	<artifactId>spring-security-core</artifactId>
+        		<version>4.1.2.RELEASE</version>
+        </dependency>
+         <dependency>
+        		<groupId>org.springframework.security</groupId>
+        		<artifactId>spring-security-web</artifactId>
+        		<version>4.1.2.RELEASE</version>
+        </dependency>
+         <dependency>
+        		<groupId>org.springframework.security</groupId>
+        		<artifactId>spring-security-config</artifactId>
+        		<version>4.1.2.RELEASE</version>
+        </dependency>
+         <dependency>
+        		<groupId>org.springframework.security</groupId>
+        		<artifactId>spring-security-taglibs</artifactId>
+       			 <version>4.1.2.RELEASE</version>
+        </dependency>
+        
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
 		<dependency>
 			<groupId>org.springframework</groupId>
